fix: opens on mobile

--- a/src/components/Main/Table.css
+++ b/src/components/Main/Table.css
@@ -128,8 +128,8 @@ input[type=number] {
 .balance-wrapper{
     display: flex;
     flex-direction: column;
-    justify-content: start;
-    align-items:start;
+    justify-content: flex-start;
+    align-items:flex-start;
     min-width: 200px;
 }
 
